Custom--app/main/default/objects/Box_Configuration__c/Box_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Box Configuration</label>
</CustomObject>