Custom--app/main/default/objects/Box_Configuration__c/fields/Cloudbees_End_Point_Url__c.field-meta.xml
<CustomField>
    <fullName>Cloudbees_End_Point_Url__c</fullName>
    <label>Cloudbees End Point Url</label>
    <type>Url</type>
</CustomField>