Custom--app/main/default/objects/Box_Configuration__c/fields/Cloudbees_Service_Secret__c.field-meta.xml
<CustomField>
    <fullName>Cloudbees_Service_Secret__c</fullName>
    <label>Cloudbees Service Secret</label>
    <length>10</length>
    <type>Text</type>
</CustomField>