Custom--app/main/default/objects/Box_Configuration__c/fields/Pipeline_Files_Root_Folder__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Files_Root_Folder__c</fullName>
    <label>Pipeline Files Root Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>