Custom--app/main/default/objects/Box_Configuration__c/fields/Property_Files_Root_Folder__c.field-meta.xml
<CustomField>
    <fullName>Property_Files_Root_Folder__c</fullName>
    <defaultValue>'352380973'</defaultValue>
    <label>Property Files Root Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>