Custom--app/main/default/objects/Box_Configuration__c/fields/Prospect_Files_Root_Folder__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Files_Root_Folder__c</fullName>
    <label>Prospect Files Root Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>