Custom--app/main/default/objects/Box_Configuration__c/fields/System_Issue_Files_Root_Folder__c.field-meta.xml
<CustomField>
    <fullName>System_Issue_Files_Root_Folder__c</fullName>
    <defaultValue>'358878939'</defaultValue>
    <label>System Issue Files Root Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>