Custom--app/main/default/objects/Box_Configuration__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <defaultValue>'xkxndbhyaxhqn3amx9udmsc9zliz4k1g'</defaultValue>
    <label>Ticket</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>